--- a/client/package.json
+++ b/client/package.json
@@ -33,5 +33,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.3",
+    "source-map-explorer": "^2.3.1"
+  }
 }
