--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/react-redux-toastr": "^7.6.0",
+    "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
+    "react-redux-toastr": "^7.6.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux-forms": "^1.0.0-3",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
@@ -36,6 +42,7 @@
   "proxy": "http://localhost:5000",
   "devDependencies": {
     "@types/react-router-dom": "^5.1.3",
+    "redux-devtools-extension": "^2.13.8",
     "source-map-explorer": "^2.3.1"
   }
 }
